criacao de tabela

--- a/exemplo1.html
+++ b/exemplo1.html
@@ -78,9 +78,19 @@
 
 
                         <div class="form-group"> <!--inicio do campo de botoes-->
-                                    <button type="submit" class="btn btn-success">Salvar</button>
-                                    <button type="submit"class="btn btn-danger">Limpar</button>
-
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <button type="submit" class="btn btn-success btn-block">
+                                                Salvar
+                                            </button>
+                                         </div>
+                                    
+                                    <div class="col-6">
+                                        <button type="reset" class="btn btn-danger btn-block">
+                                            Limpar
+                                        </button>
+                                    </div>
+                                          
                         </div><!--final do campo de botoes-->
                     </fieldset>
 
